# cocos2d-x-lite

cocos/platform/desktop/: CCGLView-desktop.cpp
cocos/platform/mac/: View.mm
cocos/renderer/: CMakeLists.txt
cocos/renderer/core/gfx/: GFXDef.h
cocos/renderer/gfx-gles2/: CMakeLists.txt  GLES2Commands.cc  GLES2Context.cc  GLES2Device.cc  GLES2InputAssembler.cc  GLES2Shader.cc
cocos/renderer/gfx-gles3/: GLES3Commands.cc  GLES3Device.cc
cocos/renderer/gfx-metal/: CMakeLists.txt  MTLBuffer.mm  MTLCommandBuffer.mm  MTLDevice.mm  MTLUtils.mm
cocos/renderer/gfx-vulkan/: VKBindingLayout.cc  VKCommands.cc  VKCommands.cpp  VKCommands.h  VKContext.cc  VKDevice.cc  VKDevice.h  VKFramebuffer.cc  VKGPUObjects.h  VKTexture.cc  VKTexture.h  VKUtils.h  VKWindow.cc  VKWindow.h
cocos/scripting/js-bindings/auto/: jsb_gfx_auto.cpp  jsb_gfx_auto.hpp
tools/tojs/: gfx.ini
